# tko-libraries-legacy

./: .gitignore  LICENSE  README.md  build.gradle  build.gradle.kts  cleanup.txt  config.gradle  gradlew  jni.gradle  publish.gradle  settings.gradle  settings.gradle.kts
controls/: build.gradle.kts
core/: build.gradle.kts
cpp-util/: CMakeLists.txt  build.gradle  config.gradle  library.cpp  settings.gradle
cpp-util-module/: build.gradle  build.gradle.kts
cpp-util-old/: CMakeLists.txt  library.cpp
cpp-util/Eigen/: Core
cpp-util/Eigen/src/Core/: MathFunctions.h
cpp-util/Eigen/src/Core/arch/AVX/: MathFunctions.h
cpp-util/Eigen/src/Core/arch/AltiVec/: MathFunctions.h
cpp-util/Eigen/src/Core/arch/NEON/: MathFunctions.h
cpp-util/Eigen/src/Core/arch/SSE/: MathFunctions.h
cpp-util/Eigen/src/Core/arch/ZVector/: MathFunctions.h
cpp-util/Eigen/src/Core/util/: Macros.h
cpp-util/Eigen/src/LU/: FullPivLU.h
cpp-util/drake/: discrete_algebraic_riccati_equation.h
cpp-util/drake/common/: drake_assert_and_throw.cpp  never_destroyed.h
cpp-util/drake/math/: discrete_algebraic_riccati_equation.cpp
cpp-util/drake_old/: discrete_algebraic_riccati_equation.h
data-collection/: build.gradle.kts
datatypes/: build.gradle  build.gradle.kts
motion/: build.gradle.kts
motion-profiling/: build.gradle.kts
oi/: build.gradle.kts
path-following/: build.gradle.kts
path-generation/: build.gradle  build.gradle.kts
simulation/: build.gradle.kts
vendordeps/: Phoenix.json  REVRobotics.json  WPILibNewCommands.json
vision/: build.gradle.kts
(+514 files in other folders)
